--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Profile - Mochamad Nurkhayal Kadafi</title>
+    <title>Mochamad Nurkhayal Kadafi</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     
     <link href="https://fonts.googleapis.com/css?family=Poppins:100,200,300,400,500,600,700,800,900" rel="stylesheet">
-
+    <link rel="icon" href="images/dot.png">
     <link rel="stylesheet" href="css/open-iconic-bootstrap.min.css">
     <link rel="stylesheet" href="css/animate.css">
     
@@ -167,7 +167,7 @@
 					    	</div>
 					    	<div class="text pl-3">
 		    					<span class="date">2012-2014</span>
-		    					<h2>Junior High School</h2>
+		    					<h2>Sekolah Menengah Pertama</h2>
 		    					<span class="position">SMP Negeri 2 Karangtengah</span>
 		    					<!-- <p>A small river named Duden flows by their place and supplies it with the necessary regelialia. It is a paradisematic country, in which roasted parts of sentences fly into your mouth.</p> -->
 		    				</div>
@@ -178,7 +178,7 @@
 					    	</div>
 					    	<div class="text pl-3">
 		    					<span class="date">2007-2012</span>
-		    					<h2>Primary School </h2>
+		    					<h2>Sekolah Dasar</h2>
 		    					<span class="position">SD Negeri Sukataris</span>
 		    					<!-- <p>A small river named Duden flows by their place and supplies it with the necessary regelialia. It is a paradisematic country, in which roasted parts of sentences fly into your mouth.</p> -->
 		    				</div>
