--- a/index.html
+++ b/index.html
@@ -237,7 +237,7 @@
                 </div>
                 <div class="text pl-3">
                   <span class="date">2016</span>
-                  <h2>Web Designer - Top10</h2>
+                  <h2>Web Design - Top10</h2>
                   <span class="position">LKS Provinsi Jawa Barat</span>
                   	<!-- <p>A small river named Duden flows by their place and supplies it with the necessary regelialia. It is a paradisematic country, in which roasted parts of sentences fly into your mouth.</p> -->
                 </div>                 
