--- a/index.html
+++ b/index.html
@@ -20,7 +20,23 @@
     
     <link rel="stylesheet" href="css/flaticon.css">
     <link rel="stylesheet" href="css/icomoon.css">
-    <link rel="stylesheet" href="css/style.css">
+		<link rel="stylesheet" href="css/style.css">
+		<style>
+			.customaja{
+				text-align: center;
+				position: relative;
+				width: 200px;
+				height: 200px;
+				overflow: hidden;
+				margin: auto;
+				border-radius: 50%;
+			}
+
+			.customaja img{
+				width: 100%;
+				height: auto;
+			}
+		</style>
   </head>
   <body data-spy="scroll" data-target=".site-navbar-target" data-offset="300">
 	  
@@ -43,11 +59,17 @@
 	    </div>
 	  </nav>
 	  <section class="hero-wrap js-fullheight">
-      <div class="overlay"></div>
+			
+      <div class="overlay">				
+			</div>
       <div class="container">
-        <div class="row no-gutters slider-text js-fullheight justify-content-center align-items-center">
+				<div class="row no-gutters slider-text js-fullheight justify-content-center align-items-center">
           <div class="col-lg-8 col-md-6 ftco-animate d-flex align-items-center">
-          	<div class="text text-center">
+          	<div class="text text-center">	
+							<div class="customaja">
+									<img src="images/light.jpg">
+							</div>
+							<br>	
           		<span class="subheading">Hey! I am</span>
 		  				<h1>Mochamad Nurkhayal Kadafi</h1>
 			  				<h2>I'm 
@@ -61,23 +83,16 @@
           </div>
         </div>
       </div>
-      <div class="mouse">
+      <!-- <div class="mouse">
 				<a href="#" class="mouse-icon">
 					<div class="mouse-wheel"><span class="ion-ios-arrow-round-down"></span></div>
 				</a>
-			</div>
+			</div> -->
     </section>
 
     <section class="ftco-about img ftco-section ftco-no-pt ftco-no-pb" id="about-section">
     	<div class="container">
     		<div class="row d-flex no-gutters">
-    			<div class="col-md-6 col-lg-6 d-flex">
-    				<div class="img-about img d-flex align-items-stretch">
-    					<div class="overlay"></div>
-	    				<div class="img d-flex align-self-stretch align-items-center" style="background-image:url(images/light.jpg);">
-	    				</div>
-    				</div>
-    			</div>
     			<div class="col-md-6 col-lg-6 pl-md-5 py-5">
     				<div class="row justify-content-start pb-3">
 		          <div class="col-md-12 heading-section ftco-animate">
@@ -96,31 +111,11 @@
 		        </div>
 	          <div class="counter-wrap ftco-animate d-flex mt-md-3">
               <div class="text">
-              	<!-- <p class="mb-4">
-	                <span class="number" data-number="Hidden">0</span>
-	                <span>Project complete</span>
-                </p> -->
                 <p><a href="#" class="btn btn-primary py-3 px-3">Download CV (Soon)</a></p>
               </div>
 	          </div>
 	        </div>
         </div>
-    	</div>
-    </section>
-
-    <section class="ftco-section ftco-partner">
-    	<div class="container">
-    		<div class="row">
-    			<div class="col-sm ftco-animate">
-    				<a class="partner"><img src="images/Apple.png" class="img-fluid" alt="Colorlib Template"></a>
-    			</div>
-    			<div class="col-sm ftco-animate">
-    				<a class="partner"><img src="images/partner-4.png" class="img-fluid" alt="Colorlib Template"></a>
-                </div>
-    			<div class="col-sm ftco-animate">
-                    <a class="partner"><img src="images/partner-1.png" class="img-fluid" alt="Colorlib Template"></a>
-                </div>                
-    		</div>
     	</div>
     </section>
 
