--- a/index.html
+++ b/index.html
@@ -408,12 +408,14 @@
         <div class="row mb-5">
           <div class="col-md">
             <div class="ftco-footer-widget mb-4">
-              <h2 class="ftco-heading-2">About</h2>
-              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis veritatis obcaecati neque minus nisi illum atque,</p>
+              <h2 class="ftco-heading-2">Social Media</h2>
+              <!-- <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis veritatis obcaecati neque minus nisi illum atque,</p> -->
               <ul class="ftco-footer-social list-unstyled float-md-left float-lft mt-5">
                 <li class="ftco-animate"><a href="https://www.twitter.com/mnkadafi" target="_blank"><span class="icon-twitter"></span></a></li>
                 <li class="ftco-animate"><a href="https://www.facebook.com/simple1998" target="_blank"><span class="icon-facebook"></span></a></li>
-                <li class="ftco-animate"><a href="https://www.instagram.com/mnkadafi" target="_blank"><span class="icon-instagram"></span></a></li>
+								<li class="ftco-animate"><a href="https://www.instagram.com/mnkadafi" target="_blank"><span class="icon-instagram"></span></a></li>
+								<li class="ftco-animate"><a href="https://www.linkedin.com/in/mnkadafi/" target="_blank"><span class="icon-linkedin"></span></a></li>
+								<li class="ftco-animate"><a href="https://www.flickr.com/photos/142804952@N03" target="_blank"><span class="icon-flickr"></span></a></li>
               </ul>
             </div>
           </div>
