--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 	  
     <nav class="navbar navbar-expand-lg navbar-dark ftco_navbar ftco-navbar-light site-navbar-target" id="ftco-navbar">
 	    <div class="container">
-	      <a class="navbar-brand" href="index.html"><span>MN</span>Kadafi</a>
+	      <a class="navbar-brand" href="index.html">Official</a>
 	      <button class="navbar-toggler js-fh5co-nav-toggle fh5co-nav-toggle" type="button" data-toggle="collapse" data-target="#ftco-nav" aria-controls="ftco-nav" aria-expanded="false" aria-label="Toggle navigation">
 	        <span class="oi oi-menu"></span> Menu
 	      </button>
@@ -67,53 +67,36 @@
           <div class="col-lg-8 col-md-6 ftco-animate d-flex align-items-center">
           	<div class="text text-center">	
 							<div class="customaja">
-									<img src="images/light.jpg">
+									<img src="images/pp.jpeg">
 							</div>
-							<br>	
-          		<span class="subheading">Hey! I am</span>
+							<br>
 		  				<h1>Mochamad Nurkhayal Kadafi</h1>
-			  				<h2>I'm 
-								  <span
+			  				<h2>
+									<span class="txt-rotate">
+											iOS Developer
+									</span>
+								  <!-- <span
 								     class="txt-rotate"
 								     data-period="2000"
-								     data-rotate='[ "an iOS Developer.", "a Web Developer.", "a Student" ]'></span>
+								     data-rotate='[ "an iOS Developer.", "a Web Developer.", "a Student" ]'></span> -->
 								</h2>
 							</div>
             </div>
           </div>
         </div>
       </div>
-      <!-- <div class="mouse">
-				<a href="#" class="mouse-icon">
-					<div class="mouse-wheel"><span class="ion-ios-arrow-round-down"></span></div>
-				</a>
-			</div> -->
     </section>
 
     <section class="ftco-about img ftco-section ftco-no-pt ftco-no-pb" id="about-section">
     	<div class="container">
     		<div class="row d-flex no-gutters">
-    			<div class="col-md-6 col-lg-6 pl-md-5 py-5">
-    				<div class="row justify-content-start pb-3">
-		          <div class="col-md-12 heading-section ftco-animate">
-		          	<h1 class="big">About</h1>
-		            <h2 class="mb-4">About Me</h2>
-		            <p>A student who majoring Informatics Engineering at UNIKOM Bandung.</p>
-		            <ul class="about-info mt-4 px-md-0 px-2">
-		            	<li class="d-flex"><span>Name:</span> <span>Mochamad Nurkhayal Kadafi</span></li>
-		            	<li class="d-flex"><span>Date of birth:</span> <span>July 28, 1998</span></li>
-		            	<li class="d-flex"><span>Address:</span> <span>Bandung (Now)</span></li>
-		            	<li class="d-flex"><span>Zip code:</span> <span>40134</span></li>
-		            	<li class="d-flex"><span>Email:</span> <span>mnkadafi98@gmail.com</span></li>
-		            	<li class="d-flex"><span>Phone: </span> <span>+62 89521285347</span></li>
-		            </ul>
+    			<div class="col-md-12 col-lg-12 pl-md-12 py-5">
+    				<div class="row justify-content-center pb-12">
+		          <div class="col-md-12 heading-section text-center ftco-animate">
+								<h2 class="mb-4">About</h2>
+								<p>Hidup bukan untuk coba-coba, jika kamu gagal kamu tidak bisa mengulang kehidupan.</p>
 		          </div>
 		        </div>
-	          <div class="counter-wrap ftco-animate d-flex mt-md-3">
-              <div class="text">
-                <p><a href="#" class="btn btn-primary py-3 px-3">Download CV (Soon)</a></p>
-              </div>
-	          </div>
 	        </div>
         </div>
     	</div>
@@ -330,52 +313,38 @@
     	</div>
     </section>
 
-    <section class="ftco-section ftco-hireme img" style="background-image: url(images/bg_1.jpg)">
-    	<div class="overlay"></div>
-			<div class="container">
-				<div class="row justify-content-center">
-					<div class="col-md-7 ftco-animate text-center">
-						<h2>I'm <span>Available</span> for freelancing</h2>
-						<p>Don't hesitate, feel free to contact me.</p>
-						<p class="mb-0"><a href="#" class="btn btn-primary py-3 px-5">Hire me</a></p>
-					</div>
-				</div>
-			</div>
-		</section>
-
     <section class="ftco-section contact-section ftco-no-pb" id="contact-section">
       <div class="container">
       	<div class="row justify-content-center mb-5 pb-3">
           <div class="col-md-7 heading-section text-center ftco-animate">
-            <h1 class="big big-2">Contact</h1>
-            <h2 class="mb-4">Contact Me</h2>
+            <h2 class="mb-4">Contact</h2>
           </div>
         </div>
 
         <div class="row d-flex contact-info mb-5">
-          <div class="col-md-6 col-lg-3 d-flex ftco-animate">
+          <div class="col-md-6 col-lg-4 d-flex ftco-animate">
           	<div class="align-self-stretch box text-center p-4 shadow">
           		<div class="icon d-flex align-items-center justify-content-center">
           			<span class="icon-map-signs"></span>
           		</div>
           		<div>
 	          		<h3 class="mb-4">WhatsApp</h3>
-		            <p><a href="https://api.whatsapp.com/send?phone=6289521285347&text=Hello&source=&data=&app_absent=" target="_blank">Send me message</a></p>
+		            <p><a href="https://api.whatsapp.com/send?phone=6289521285347&text=Hello, Kadafi&source=&data=&app_absent=" target="_blank">Send me message</a></p>
 		          </div>
 	          </div>
           </div>
-          <div class="col-md-6 col-lg-3 d-flex ftco-animate">
+          <div class="col-md-6 col-lg-4 d-flex ftco-animate">
           	<div class="align-self-stretch box text-center p-4 shadow">
           		<div class="icon d-flex align-items-center justify-content-center">
           			<span class="icon-phone2"></span>
           		</div>
           		<div>
-	          		<h3 class="mb-4">Contact Number</h3>
+	          		<h3 class="mb-4">Phone Number</h3>
 		            <p><a href="tel://1234567920">+62 89521285347</a></p>
 	            </div>
 	          </div>
           </div>
-          <div class="col-md-6 col-lg-3 d-flex ftco-animate">
+          <div class="col-md-6 col-lg-4 d-flex ftco-animate">
           	<div class="align-self-stretch box text-center p-4 shadow">
           		<div class="icon d-flex align-items-center justify-content-center">
           			<span class="icon-paper-plane"></span>
@@ -384,17 +353,6 @@
 	          		<h3 class="mb-4">Email Address</h3>
 		            <p><a href="mailto:mnkadafi98@gmail.com">mnkadafi98@gmail.com</a></p>
 		          </div>
-	          </div>
-          </div>
-          <div class="col-md-6 col-lg-3 d-flex ftco-animate">
-          	<div class="align-self-stretch box text-center p-4 shadow">
-          		<div class="icon d-flex align-items-center justify-content-center">
-          			<span class="icon-globe"></span>
-          		</div>
-          		<div>
-	          		<h3 class="mb-4">Website</h3>
-		            <p><a href="https://mnkadafi.github.io" target="_blank">mnkadafi.github.io</a></p>
-	            </div>
 	          </div>
           </div>
         </div>
@@ -408,7 +366,6 @@
           <div class="col-md">
             <div class="ftco-footer-widget mb-4">
               <h2 class="ftco-heading-2">Social Media</h2>
-              <!-- <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis veritatis obcaecati neque minus nisi illum atque,</p> -->
               <ul class="ftco-footer-social list-unstyled float-md-left float-lft mt-5">
                 <li class="ftco-animate"><a href="https://www.twitter.com/mnkadafi" target="_blank"><span class="icon-twitter"></span></a></li>
                 <li class="ftco-animate"><a href="https://www.facebook.com/simple1998" target="_blank"><span class="icon-facebook"></span></a></li>
@@ -421,10 +378,7 @@
         </div>
         <div class="row">
           <div class="col-md-12 text-center">
-
-            <p><!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
   Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="icon-heart color-danger" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a>
-  <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. --></p>
           </div>
         </div>
       </div>
