--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
           <div class="col-lg-8 col-md-6 ftco-animate d-flex align-items-center">
           	<div class="text text-center">	
 							<div class="customaja">
-									<img src="images/pp.jpeg">
+									<img src="images/pp.jpg">
 							</div>
 							<br>
 		  				<h1>Mochamad Nurkhayal Kadafi</h1>
